--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 img {
@@ -36,9 +38,59 @@ h2 {
     font-weight: 400;
 }
 
+h3 {
+    text-align: center;
+}
+
 p {
     max-width: 80%;
     margin: 10px auto;
+    text-align: center;
+}
+
+.area-expertise-container {
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.area-expertise-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    margin: 10px;
+    width: 150px; 
+    height: 100px; 
+    border-radius: 8px;
+    border: 2px solid transparent; /* Transparent border for a seamless hover effect */
+    background-color: #ffffff; /* Lighter background for contrast */
+    transition: all 0.3s ease; /* Smooth transition for hover effect */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+}
+
+.area-expertise-item:hover {
+    transform: scale(1.05); /* Slight enlargement on hover */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
+    border-color: #58674d; /* Darkened border on hover */
+}
+
+.medium-link {
+    text-decoration: none; /* Removes underline */
+    color: inherit; /* Inherit text color from parent */
+    width: 150px;
+}
+
+.medium-link .area-expertise-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    background-color:darkcyan;
+    border-color: darkcyan;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
@@ -52,9 +104,42 @@ p {
 
     h2 {
         font-size: 1.3em;
+        text-align: center;
     }
 
     p {
         max-width: 90%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .area-expertise-container {
+        justify-content: center; /* Center items on smaller screens */
+    }
+
+    .area-expertise-item {
+        width: calc(90% - 20px); /* Adjust width for smaller screens */
+        margin: 10px auto; /* Center items with auto margins */
+    }
+
+    .medium-link {
+        width: calc(90% - 20px);
+        margin: 10px auto;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .area-expertise-container {
+        flex-direction: column;
+    }
+
+    .area-expertise-item {
+        width: calc(80% - 20px); /* Adjust width to account for margin */
+        margin: 10px auto; /* Center items with auto margins */
+    }
+
+    .medium-link{
+        width: calc(80% - 20px); /* Adjust width to account for margin */
+        margin: 10px auto;
     }
 }
