--- a/style.css
+++ b/style.css
@@ -1,149 +1,63 @@
+/* Global styles */
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    background-color: #f4f4f4;
-    color: #333;
     line-height: 1.6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    padding-left: 10px;
-    padding-right: 10px;
+    transition: all 0.3s ease;
+}
+
+/* Dark mode styles */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+/* Light mode styles */
+body:not(.dark-mode) {
+    background-color: #f4f4f4;
+    color: #333;
+}
+
+/* Dark mode styles for cards */
+body.dark-mode .card {
+    background-color: #444;
+    color: #fff;
+}
+
+/* Light mode styles for cards */
+body:not(.dark-mode) .card {
+    background-color: #fff;
+    color: #333;
+}
+
+.mode-toggle-container {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-    margin-top: 20px;
-}
-
-h1, h2 {
-    color: #333;
-    letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 3em;
+    font-weight: 700;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
 }
 
 h2 {
-    font-size: 1.5em;
-    margin-top: -10px;
-    font-weight: 400;
+    margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
-h3 {
-    text-align: center;
+.row {
+    margin-bottom: 30px;
 }
 
-p {
-    max-width: 80%;
-    margin: 10px auto;
-    text-align: center;
-}
-
-.area-expertise-container {
-    max-width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-}
-
-.area-expertise-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 20px;
-    margin: 10px;
-    width: 150px; 
-    height: 100px; 
-    border-radius: 8px;
-    border: 2px solid transparent; /* Transparent border for a seamless hover effect */
-    background-color: #ffffff; /* Lighter background for contrast */
-    transition: all 0.3s ease; /* Smooth transition for hover effect */
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-}
-
-.area-expertise-item:hover, .area-expertise-item:active {
-    transform: scale(1.05); /* Slight enlargement on hover */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
-    border-color: #58674d; /* Darkened border on hover */
-}
-
-.medium-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-decoration: none; /* Removes underline */
-    color: inherit; /* Inherit text color from parent */
-    width: 150px;
-}
-
-.medium-link .area-expertise-item:hover, .medium-link .area-expertise-item:active  {
-    transform: scale(1.05);
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    background-color:darkcyan;
-    border-color: darkcyan;
-    color: white;
-}
-
-@media screen and (max-width: 768px) {
-    body {
-        font-size: 14px;
-    }
-
-    h1 {
-        font-size: 2em;
-    }
-
-    h2 {
-        font-size: 1.3em;
-        text-align: center;
-    }
-
-    p {
-        max-width: 90%;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    .area-expertise-container {
-        justify-content: center; /* Center items on smaller screens */
-    }
-
-    .area-expertise-item {
-        width: calc(90% - 20px); /* Adjust width for smaller screens */
-        margin: 10px auto; /* Center items with auto margins */
-    }
-
-    .medium-link {
-        width: calc(90% - 20px);
-        margin: 10px auto;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .area-expertise-container {
-        flex-direction: column;
-    }
-
-    .area-expertise-item {
-        width: calc(80% - 20px); /* Adjust width to account for margin */
-        margin: 10px auto; /* Center items with auto margins */
-    }
-
-    .medium-link{
-        width: calc(80% - 20px); /* Adjust width to account for margin */
-        margin: 10px auto;
-    }
+.card-deck {
+    margin: 20px;
 }
